--- a/AlfaGTKITTPixels2.0/AlfaGTKITTPixels2.0.vcxproj
+++ b/AlfaGTKITTPixels2.0/AlfaGTKITTPixels2.0.vcxproj
@@ -47,10 +47,10 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <ForcedIncludeFiles>%(ForcedIncludeFiles)</ForcedIncludeFiles>
-      <IgnoreStandardIncludePath>true</IgnoreStandardIncludePath>
-      <PreprocessorDefinitions>%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <AdditionalIncludeDirectories>$(ProjectDir)..\AlfaGTKITTPixels2.0;$(ProjectDir)..\..\..\..\..\..\arduino\libraries;$(ProjectDir)..\..\..\..\Dropbox\_DUINO_REPO\libraries;$(ProjectDir)..\..\..\..\..\..\arduino\hardware\arduino\avr\libraries;$(ProjectDir)..\..\..\..\..\..\arduino\hardware\arduino\avr\cores\arduino;$(ProjectDir)..\..\..\..\..\..\arduino\hardware\arduino\avr\variants\yun;$(ProjectDir)..\..\..\..\..\..\arduino\hardware\tools\avr\avr\include\;$(ProjectDir)..\..\..\..\..\..\arduino\hardware\tools\avr\avr\include\avr\;$(ProjectDir)..\..\..\..\..\..\arduino\hardware\tools\avr\lib\gcc\avr\4.8.1\include;$(ProjectDir)..\..\..\..\..\..\arduino\hardware\tools\avr\lib\gcc\avr\4.9.2\include;$(ProjectDir)..\..\..\..\..\..\arduino\hardware\tools\avr\lib\gcc\avr\4.9.3\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <ForcedIncludeFiles>$(ProjectDir)__vm\.AlfaGTKITTPixels2.0.vsarduino.h;%(ForcedIncludeFiles)</ForcedIncludeFiles>
+      <IgnoreStandardIncludePath>false</IgnoreStandardIncludePath>
+      <PreprocessorDefinitions>__AVR_ATmega32u4__;__AVR_ATmega32U4__;F_CPU=16000000L;ARDUINO=10803;ARDUINO_AVR_YUN;ARDUINO_ARCH_AVR;USB_VID=0x2341;USB_PID=0x8041;__cplusplus=201103L;_VMICRO_INTELLISENSE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
@@ -80,6 +80,9 @@
     <None Include="AlfaGTKITTPixels2.0.ino">
       <FileType>CppCode</FileType>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="__vm\.AlfaGTKITTPixels2.0.vsarduino.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
