--- a/AlfaGTKITTPixels2.0/AlfaGTKITTPixels2.0.vcxproj.filters
+++ b/AlfaGTKITTPixels2.0/AlfaGTKITTPixels2.0.vcxproj.filters
@@ -17,4 +17,9 @@
   <ItemGroup>
     <None Include="AlfaGTKITTPixels2.0.ino" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="__vm\.AlfaGTKITTPixels2.0.vsarduino.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
 </Project>
